// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots NewProcess Default 1`] = `
<section
  className="storybook-container"
>
  <div
    className="euiPage euiPage--paddingMedium euiPage--grow"
  >
    <div
      className="euiPageBody euiPageBody--borderRadiusNone mod-new-process"
    >
      <section
        className="card"
      >
        <h1>
          Create new process / subscription
        </h1>
        <div
          className="user-input-form"
        >
          <div
            className="confirmation-dialog-overlay"
          />
          <section
            className="form-fieldset"
          >
            <h3>
              Choose Product
            </h3>
            <form
              noValidate={true}
              onSubmit={[Function]}
            >
              <section>
                <section
                  className="form-input"
                >
                  <div
                    className="euiFormRow euiFormRow--fullWidth"
                    id="input-product-row"
                  >
                    <div
                      className="euiFormRow__labelWrapper"
                    >
                      <label
                        aria-invalid={null}
                        className="euiFormLabel euiFormRow__label"
                        htmlFor="input-product"
                        id="input-product-label"
                      >
                        forms.fields.product
                      </label>
                       
                      <div
                        className="euiText euiText--medium"
                      >
                         
                      </div>
                    </div>
                    <div
                      className="euiFormRow__fieldWrapper"
                    >
                      <div
                        className=" css-2b097c-container"
                        id="input-product"
                        onKeyDown={[Function]}
                      >
                        <span
                          aria-atomic="false"
                          aria-live="polite"
                          aria-relevant="additions text"
                          className="css-1f43avz-a11yText-A11yText"
                        />
                        <div
                          className=" css-16v2aco-control"
                          onMouseDown={[Function]}
                          onTouchEnd={[Function]}
                        >
                          <div
                            className=" css-g1d714-ValueContainer"
                          >
                            <div
                              className=" css-1wa3eu0-placeholder"
                            >
                              Search and select a product...
                            </div>
                            <div
                              className="css-1424cry-Input"
                            >
                              <div
                                className=""
                                style={
                                  Object {
                                    "display": "inline-block",
                                  }
                                }
                              >
                                <input
                                  aria-autocomplete="list"
                                  autoCapitalize="none"
                                  autoComplete="off"
                                  autoCorrect="off"
                                  disabled={false}
                                  id="input-product.search"
                                  onBlur={[Function]}
                                  onChange={[Function]}
                                  onFocus={[Function]}
                                  spellCheck="false"
                                  style={
                                    Object {
                                      "background": 0,
                                      "border": 0,
                                      "boxSizing": "content-box",
                                      "color": "inherit",
                                      "fontSize": "inherit",
                                      "label": "input",
                                      "opacity": 1,
                                      "outline": 0,
                                      "padding": 0,
                                      "width": "1px",
                                    }
                                  }
                                  tabIndex="0"
                                  type="text"
                                  value=""
                                />
                                <div
                                  style={
                                    Object {
                                      "height": 0,
                                      "left": 0,
                                      "overflow": "scroll",
                                      "position": "absolute",
                                      "top": 0,
                                      "visibility": "hidden",
                                      "whiteSpace": "pre",
                                    }
                                  }
                                >
                                  
                                </div>
                              </div>
                            </div>
                          </div>
                          <div
                            className=" css-1hb7zxy-IndicatorsContainer"
                          >
                            <span
                              className=" css-1okebmr-indicatorSeparator"
                            />
                            <div
                              aria-hidden="true"
                              className=" css-tlfecz-indicatorContainer"
                              onMouseDown={[Function]}
                              onTouchEnd={[Function]}
                            >
                              <svg
                                aria-hidden="true"
                                className="css-tj5bde-Svg"
                                focusable="false"
                                height={20}
                                viewBox="0 0 20 20"
                                width={20}
                              >
                                <path
                                  d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                                />
                              </svg>
                            </div>
                          </div>
                        </div>
                        <input
                          name="product"
                          type="hidden"
                          value=""
                        />
                      </div>
                    </div>
                  </div>
                </section>
              </section>
              <div
                className="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow euiFlexGroup--responsive buttons"
              >
                <div
                  className="euiFlexItem"
                >
                  <div
                    className="euiFlexItem"
                  >
                    <button
                      className="euiButton euiButton--warning"
                      disabled={false}
                      id="button-cancel-form-submit"
                      onClick={[Function]}
                      style={
                        Object {
                          "minWidth": undefined,
                        }
                      }
                      type="button"
                    >
                      <span
                        className="euiButtonContent euiButton__content"
                      >
                        <span
                          className="euiButton__text"
                        >
                          Cancel
                        </span>
                      </span>
                    </button>
                  </div>
                </div>
                <div
                  className="euiFlexItem"
                >
                  <button
                    className="euiButton euiButton--primary euiButton--fill"
                    disabled={false}
                    id="button-next-form-submit"
                    style={
                      Object {
                        "minWidth": undefined,
                      }
                    }
                    tabIndex={0}
                    type="submit"
                  >
                    <span
                      className="euiButtonContent euiButton__content"
                    >
                      <span
                        className="euiButton__text"
                      >
                        Next
                      </span>
                    </span>
                  </button>
                </div>
              </div>
            </form>
          </section>
        </div>
      </section>
    </div>
  </div>
</section>
`;

exports[`Storyshots NewProcess Preselected 1`] = `
<section
  className="storybook-container"
>
  <div
    className="euiPage euiPage--paddingMedium euiPage--grow"
  >
    <div
      className="euiPageBody euiPageBody--borderRadiusNone mod-new-process"
    >
      <section
        className="card"
      >
        <h1>
          Create new process / subscription
        </h1>
        <div
          className="user-input-form"
        >
          <div
            className="confirmation-dialog-overlay"
          />
          <section
            className="form-fieldset"
          >
            <h3>
              Validator
            </h3>
            <form
              noValidate={true}
              onSubmit={[Function]}
            >
              <section>
                <section
                  className="form-input"
                >
                  <div
                    className="euiFormRow euiFormRow--fullWidth"
                    id="input-organisation-row"
                  >
                    <div
                      className="euiFormRow__labelWrapper"
                    >
                      <label
                        aria-invalid={null}
                        className="euiFormLabel euiFormRow__label"
                        htmlFor="input-organisation"
                        id="input-organisation-label"
                      >
                        forms.fields.organisation *
                      </label>
                       
                      <div
                        className="euiText euiText--medium"
                      >
                         
                      </div>
                    </div>
                    <div
                      className="euiFormRow__fieldWrapper"
                    >
                      <div
                        className=" css-2b097c-container"
                        id="input-organisation"
                        onKeyDown={[Function]}
                      >
                        <span
                          aria-atomic="false"
                          aria-live="polite"
                          aria-relevant="additions text"
                          className="css-1f43avz-a11yText-A11yText"
                        />
                        <div
                          className=" css-16v2aco-control"
                          onMouseDown={[Function]}
                          onTouchEnd={[Function]}
                        >
                          <div
                            className=" css-g1d714-ValueContainer"
                          >
                            <div
                              className=" css-1wa3eu0-placeholder"
                            >
                              Search and select a customer...
                            </div>
                            <div
                              className="css-1424cry-Input"
                            >
                              <div
                                className=""
                                style={
                                  Object {
                                    "display": "inline-block",
                                  }
                                }
                              >
                                <input
                                  aria-autocomplete="list"
                                  autoCapitalize="none"
                                  autoComplete="off"
                                  autoCorrect="off"
                                  disabled={false}
                                  id="input-organisation.search"
                                  onBlur={[Function]}
                                  onChange={[Function]}
                                  onFocus={[Function]}
                                  spellCheck="false"
                                  style={
                                    Object {
                                      "background": 0,
                                      "border": 0,
                                      "boxSizing": "content-box",
                                      "color": "inherit",
                                      "fontSize": "inherit",
                                      "label": "input",
                                      "opacity": 1,
                                      "outline": 0,
                                      "padding": 0,
                                      "width": "1px",
                                    }
                                  }
                                  tabIndex="0"
                                  type="text"
                                  value=""
                                />
                                <div
                                  style={
                                    Object {
                                      "height": 0,
                                      "left": 0,
                                      "overflow": "scroll",
                                      "position": "absolute",
                                      "top": 0,
                                      "visibility": "hidden",
                                      "whiteSpace": "pre",
                                    }
                                  }
                                >
                                  
                                </div>
                              </div>
                            </div>
                          </div>
                          <div
                            className=" css-1hb7zxy-IndicatorsContainer"
                          >
                            <span
                              className=" css-1okebmr-indicatorSeparator"
                            />
                            <div
                              aria-hidden="true"
                              className=" css-tlfecz-indicatorContainer"
                              onMouseDown={[Function]}
                              onTouchEnd={[Function]}
                            >
                              <svg
                                aria-hidden="true"
                                className="css-tj5bde-Svg"
                                focusable="false"
                                height={20}
                                viewBox="0 0 20 20"
                                width={20}
                              >
                                <path
                                  d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                                />
                              </svg>
                            </div>
                          </div>
                        </div>
                        <input
                          name="organisation"
                          type="hidden"
                          value=""
                        />
                      </div>
                    </div>
                  </div>
                </section>
              </section>
              <div
                className="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow euiFlexGroup--responsive buttons"
              >
                <div
                  className="euiFlexItem"
                >
                  <div
                    className="euiFlexItem"
                  >
                    <button
                      className="euiButton euiButton--warning"
                      disabled={false}
                      id="button-cancel-form-submit"
                      onClick={[Function]}
                      style={
                        Object {
                          "minWidth": undefined,
                        }
                      }
                      type="button"
                    >
                      <span
                        className="euiButtonContent euiButton__content"
                      >
                        <span
                          className="euiButton__text"
                        >
                          Cancel
                        </span>
                      </span>
                    </button>
                  </div>
                </div>
                <div
                  className="euiFlexItem"
                >
                  <button
                    className="euiButton euiButton--primary euiButton--fill"
                    disabled={false}
                    id="button-submit-form-submit"
                    style={
                      Object {
                        "minWidth": undefined,
                      }
                    }
                    tabIndex={0}
                    type="submit"
                  >
                    <span
                      className="euiButtonContent euiButton__content"
                    >
                      <span
                        className="euiButton__text"
                      >
                        Submit
                      </span>
                    </span>
                  </button>
                </div>
              </div>
            </form>
          </section>
        </div>
      </section>
    </div>
  </div>
</section>
`;
